[tool.poetry]
name = "scene_graph_benchmark"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.8"
ipython = "^7.29.0"
h5py = "^3.5.0"
nltk = "^3.6.5"
joblib = "^1.1.0"
jupyter = "^1.0.0"
pandas = "^1.3.4"
scipy = "^1.7.2"
ninja = "^1.10.2"
yacs = "^0.1.8"
Cython = "^0.29.24"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
opencv-python = "^4.5.4"
numpy = "^1.21.4"
timm = "^0.4.12"
einops = "^0.3.2"
pycocotools = "^2.0.2"
cityscapesScripts = "^2.2.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html"
